test/ddc-spec/error/01-ErrorExp/14-AbsNotPure/Test.ds

module Test
import System.IO.Console
where

f {@a: Data} = run writel "derp"

