test/ddc-spec/error/01-ErrorExp/14-AbsNotPure/Test.error.check
Error in transformed module.
  in stage SourceLoadText
  in pipe  PipeCoreCheck/Check
  test/ddc-spec/error/01-ErrorExp/14-AbsNotPure/Test.ds:6:1
  Impure Spec abstraction
    has effect: Console
